sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value lgr
  lgr(1) = lrg (0)
  ^AlgBubbleSort1:3: error: not found: value lrg
  lgr(1) = lrg (0)
           ^