sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  lgr(1) = lrg (0)
}